--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,7 +1,8 @@
 galaxy_info:
-  author: your name
-  description: your description
-  company: your company (optional)
+  role_name: ansible-rh-precheck
+  author: Peter Ducai
+  description: prechecks for Redhat products
+  company: Red Hat
 
   # If the issue tracker for your role is not on github, uncomment the
   # next line and provide a value
@@ -14,9 +15,9 @@ galaxy_info:
   # - GPLv3
   # - Apache
   # - CC-BY
-  license: license (GPLv2, CC-BY, etc)
+  license: license (Apache)
 
-  min_ansible_version: 2.4
+  min_ansible_version: 2.7
 
   # If this a Container Enabled role, provide the minimum Ansible Container version.
   # min_ansible_container_version:
@@ -30,10 +31,7 @@ galaxy_info:
   #github_branch:
 
   #
-  # Provide a list of supported platforms, and for each platform a list of versions.
-  # If you don't wish to enumerate all versions for a particular platform, use 'all'.
-  # To view available platforms and versions (or releases), visit:
-  # https://galaxy.ansible.com/api/v1/platforms/
+  # platforms is a list of platforms, and each platform has a name and a list of versions.
   #
   # platforms:
   # - name: Fedora
