--- a/vars/rhvm43.yml
+++ b/vars/rhvm43.yml
@@ -1,6 +1,7 @@
 rhvm43:
+  version: "4.3"
   processor_vcpus_min: 2
   memory_total_min: 4294967296
-  hdd_total_min: 25GB # TODO: fix numbers
+  hdd_total_min: 26843545600 #25GB
   nic_total_min: 1
   nic_speed_min: 1000
