--- a/tasks/generate_report.yml
+++ b/tasks/generate_report.yml
@@ -6,3 +6,16 @@
     backup: yes
     src: templates/report.j2
     dest: ~/report_precheck_{{ ansible_date_time.date }}.txt
+  tags:
+    - always
+
+- name: generate group reports  # TODO: create files by groups
+  hosts: localhost
+  connection: local
+  template:
+    backup: yes
+    src: "{{ item.src }}"
+    dest: "{{ item.dest }}"
+  loop:
+    - { src: 'bla', dest: 'bla' }
+    - { src: 'bla', dest: 'bla' }
